@@ -2459,6 +2459,15 @@ horn of plenty
 horned devil
 	Horned devils lack any real special abilities, though they
 	are quite difficult to kill.
+*horror
+	Despite its eldritch appearance, the shambling horror is
+	among the most harmless inhabitants of the Dungeons of
+	Doom. Many adventurers who have returned from the depths
+	can attest to the varied yet innocuous aspects of this
+	creature. It is speculated by some that the shambling
+	horror may occasionally possess abilities that are quite
+	lethal, but if this is true, no one has yet observed
+	them and survived to document it.
 ~horsem*
 *horse
 	King Richard III: A horse! a horse! my kingdom for a horse!
