@@ -542,6 +542,8 @@ void
 u_init()
 {
 	register int i;
+	struct permonst* shambler = &mons[PM_SHAMBLING_HORROR];
+	struct attack* attkptr;
 
 	flags.female = flags.initgend;
 	flags.beginner = 1;
@@ -944,6 +946,65 @@ u_init()
 		/* only get here when didn't boost strength or constitution */
 		break;
 	}
+
+	/* what a horrible night to have a curse */
+	shambler->mlevel += rnd(6)-3;				/* shuffle level */
+	shambler->mmove = rn2(10)+9;				/* slow to very fast */
+	shambler->ac = rn2(21)-10;				/* any AC */
+	shambler->mr = rn2(5)*25;				/* varying amounts of MR */
+	shambler->maligntyp = rn2(21)-10;			/* any alignment */
+	/* attacks...?  */
+	for (i = 0; i < rnd(4); i++) {
+		attkptr = &shambler->mattk[i];
+		/* restrict it to certain types of attacks */
+		attkptr->aatyp = 0;
+		while (attkptr->aatyp == 0 || attkptr->aatyp == AT_ENGL || attkptr->aatyp == AT_SPIT ||
+					attkptr->aatyp == AT_BREA || attkptr->aatyp == AT_EXPL || 
+					attkptr->aatyp == AT_BOOM || attkptr->aatyp == AT_GAZE) {
+			attkptr->aatyp = rn2(AT_SCRE);
+		}
+		attkptr->adtyp = 0;
+		while (attkptr->adtyp == 0 || attkptr->adtyp == AD_DETH || attkptr->adtyp == AD_TLPT ||
+					attkptr->adtyp == AD_DGST || attkptr->adtyp == AD_SLIM ||
+					attkptr->adtyp == AD_PEST || attkptr->adtyp == AD_FAMN ||
+					attkptr->adtyp == AD_SPC1 || attkptr->adtyp == AD_SPC2) {
+			attkptr->adtyp = rn2(AD_FREZ);
+		}
+		attkptr->damn = 2;				/* we're almost sure to get this wrong first time */
+		attkptr->damd = 10;				/* either too high or too low */
+	}
+	shambler->msize = rn2(MZ_GIGANTIC+1);			/* any size */
+	shambler->cwt = 20;					/* fortunately moot as it's flagged NOCORPSE */
+	shambler->cnutrit = 20;					/* see above */
+	shambler->msound = rn2(MS_HUMANOID);			/* any but the specials */
+	shambler->mresists = 0;
+	for (i = 0; i < rnd(6); i++) {
+		shambler->mresists |= (1 << rn2(8));		/* physical resistances... */
+	}
+	for (i = 0; i < rnd(5); i++) {
+		shambler->mresists |= (0x100 << rn2(7));	/* 'different' resistances, even clumsy */
+	}
+	shambler->mconveys = 0;					/* flagged NOCORPSE */
+	/*
+	 * now time for the random flags.  this will likely produce
+	 * a number of complete trainwreck monsters at first, but
+	 * every so often something will dial up nasty stuff
+	 */
+	shambler->mflags1 = 0;
+	for (i = 0; i < rnd(17); i++) {
+		shambler->mflags1 |= (1 << rn2(33));		/* trainwreck this way :D */
+	}
+	shambler->mflags1 &= ~M1_UNSOLID;			/* no ghosts */
+	shambler->mflags1 &= ~M1_WALLWALK;			/* no wall-walkers */
+
+	shambler->mflags2 = M2_NOPOLY | M2_HOSTILE;		/* Don't let the player be one of these yet. */
+	for (i = 0; i < rnd(17); i++) {
+		shambler->mflags2 |= (1 << rn2(31));
+	}
+	shambler->mflags2 &= ~M2_MERC;				/* no guards */
+	shambler->mflags2 &= ~M2_PEACEFUL;			/* no peacefuls */
+	shambler->mflags2 &= ~M2_WERE;				/* no lycanthropes */
+	shambler->mflags2 &= ~M2_PNAME;				/* not a proper name */
 
 	return;
 }
